[0.4.36] Fix line height for `ellipsis` clipped text

--- a/src/styles/text.less
+++ b/src/styles/text.less
@@ -147,6 +147,5 @@ pre {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-    // stop hanging letters being clipped
-    min-height: 1.2em;
+    line-height: normal;
 }
